# django-alpine-js-tutorial

./: .breakpoints  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
apps/dashboard/: api.py  apps.py  models.py  schema.py  urls.py  views.py
config/: api.py  settings.py  urls.py
static/css/: site.css
static/js/: charts.js  cookie.js  dashboard.js
templates/: base.html  home.html
templates/components/: header.html  logo.html
templates/dashboard/: landing.html  layout.html
templates/dashboard/components/: charts.html  todo.html
